<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sppssr"
        android:textColor="@color/textColor"
        android:id="@+id/sppssr"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"
        android:onClick="firstsp_click" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pppc"
        android:textColor="@color/textColor"
        android:id="@+id/pppc"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/seccourse_sp"
        android:textColor="@color/textColor"
        android:id="@+id/seccourse_sp"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/seccourse_ps"
        android:textColor="@color/textColor"
        android:id="@+id/seccourse_ps"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sec_dop"
        android:textColor="@color/textColor"
        android:id="@+id/sec_dop"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_sec"
        android:textColor="@color/textColor"
        android:id="@+id/sport_sec"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/third_sp"
        android:textColor="@color/textColor"
        android:id="@+id/third_sp"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/third_ps"
        android:textColor="@color/textColor"
        android:id="@+id/third_ps"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/third_dop"
        android:textColor="@color/textColor"
        android:id="@+id/third_dop"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fo_sr"
        android:textColor="@color/textColor"
        android:id="@+id/fo_sr"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/fo_ps"
    android:textColor="@color/textColor"
    android:id="@+id/fo_ps"
    android:textSize="@dimen/text_sizable"
    android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fif"
        android:textColor="@color/textColor"
        android:id="@+id/fif"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/six"
        android:textColor="@color/textColor"
        android:id="@+id/six"
        android:textSize="@dimen/text_sizable"
        android:paddingTop="@dimen/diveders"
        android:paddingLeft="@dimen/text_left"/>



</LinearLayout>